--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #000000; /* 배경색 검정 */
+            color: #FFFFFF; /* 폰트 흰색 */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -22,6 +22,10 @@
         h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
+            font-family: Arial, sans-serif;
+        }
+        p {
+            font-family: Arial, sans-serif;
         }
         .links {
             display: flex;
@@ -31,28 +35,30 @@
         }
         .link {
             text-decoration: none;
-            color: #fff;
-            background-color: #007bff;
+            color: #FFFFFF; /* 버튼 텍스트 흰색 */
+            background-color: #444444; /* 버튼 회색 */
             padding: 0.5rem 1rem;
             border-radius: 5px;
             font-size: 1rem;
+            font-family: Arial, sans-serif;
             transition: background-color 0.3s;
         }
         .link:hover {
-            background-color: #0056b3;
+            background-color: #666666; /* 버튼 호버 시 더 밝은 회색 */
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to Soniryze</h1>
-        <p>Connect with us on:</p>
+        <p>Follow us here</p>
         <div class="links">
             <a href="https://www.youtube.com/yourchannel" class="link" target="_blank">YouTube</a>
             <a href="https://www.instagram.com/yourprofile" class="link" target="_blank">Instagram</a>
+<a href="https://twitter.com/yourprofile" class="link" target="_blank">X</a>
             <a href="https://www.tiktok.com/@yourprofile" class="link" target="_blank">TikTok</a>
-            <a href="https://tv.naver.com/yourprofile" class="link" target="_blank">Naver TV</a>
-            <a href="https://twitter.com/yourprofile" class="link" target="_blank">X</a>
+            <a href="https://tv.naver.com/yourprofile" class="link" target="_blank">NAVER TV</a>
+            
         </div>
     </div>
 </body>
