--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Follow us here</p>
         <div class="links">
             <a href="https://www.youtube.com/yourchannel" class="link" target="_blank">YouTube</a>
-            <a href="https://www.instagram.com/yourprofile" class="link" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/soniryze" class="link" target="_blank">Instagram</a>
 <a href="https://twitter.com/yourprofile" class="link" target="_blank">X</a>
             <a href="https://www.tiktok.com/@yourprofile" class="link" target="_blank">TikTok</a>
             <a href="https://tv.naver.com/yourprofile" class="link" target="_blank">NAVER TV</a>
