--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="links">
             <a href="https://www.youtube.com/yourchannel" class="link" target="_blank">YouTube</a>
             <a href="https://www.instagram.com/soniryze" class="link" target="_blank">Instagram</a>
-<a href="https://twitter.com/yourprofile" class="link" target="_blank">X</a>
-            <a href="https://www.tiktok.com/@yourprofile" class="link" target="_blank">TikTok</a>
-            <a href="https://tv.naver.com/yourprofile" class="link" target="_blank">NAVER TV</a>
+            <a href="https://x.com/soniryze" class="link" target="_blank">X</a>
+            <a href="https://www.tiktok.com/@soniryze" class="link" target="_blank">TikTok</a>
+            <a href="https://tv.naver.com/soniryze" class="link" target="_blank">NAVER TV</a>
             
         </div>
     </div>
