--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            text-align: center;
         }
         .container {
-            text-align: center;
+            width: 90%; /* 화면 크기에 맞추기 위해 컨테이너 크기를 제한 */
+            max-width: 600px; /* 최대 폭을 설정하여 너무 커지지 않도록 제한 */
         }
         h1 {
             font-size: 2.5rem;
@@ -29,8 +31,9 @@
         }
         .links {
             display: flex;
+            flex-wrap: wrap; /* 버튼들이 화면 밖으로 넘치지 않도록 자동 줄바꿈 */
             justify-content: center;
-            gap: 1rem;
+            gap: 1rem; /* 버튼 사이 간격 */
             margin-top: 1rem;
         }
         .link {
@@ -42,9 +45,18 @@
             font-size: 1rem;
             font-family: Arial, sans-serif;
             transition: background-color 0.3s;
+            flex: 1 0 calc(50% - 1rem); /* 각 버튼이 화면의 절반을 차지 */
+            max-width: 150px; /* 버튼이 너무 커지지 않도록 제한 */
+            text-align: center;
         }
         .link:hover {
             background-color: #666666; /* 버튼 호버 시 더 밝은 회색 */
+        }
+
+        @media (max-width: 500px) {
+            .link {
+                flex: 1 0 100%; /* 작은 화면에서는 버튼이 한 줄씩 표시 */
+            }
         }
     </style>
 </head>
@@ -58,7 +70,6 @@
             <a href="https://x.com/soniryze" class="link" target="_blank">X</a>
             <a href="https://www.tiktok.com/@soniryze" class="link" target="_blank">TikTok</a>
             <a href="https://tv.naver.com/soniryze" class="link" target="_blank">NAVER TV</a>
-            
         </div>
     </div>
 </body>
